# MBE-GPU

./: .gitignore  README.md
baselines/: README.md
datasets/: test.adj
scripts/: compile-GMBE.sh  compile-baselines.sh  gen-fig-10.sh  gen-fig-11.sh  gen-fig-12.sh  gen-fig-13.sh  gen-fig-6.sh  gen-fig-8.sh  gen-fig-9.sh  gen-table-2.sh  overall-eval.sh
src/: BiGraph.cu  BicliqueFinder.cu  BicliqueFinder.h  CMakeLists.txt  CudaInfo.cu  IterFinderGpu.cu  IterFinderGpu.h  WorkList.cuh  main.cu
